# sdb

./: .envrc  .gitignore  .markdown.json  Cargo.toml  README.md  publish.sh  readme.make.md  readme.md  upgrade.sh
sdb/: Cargo.toml  clippy.sh  publish.sh
sdb-macro/: Cargo.toml
sdb-macro/src/: lib.rs
sdb/src/: dbpage.rs  iter.rs  lib.rs  tx.rs
sdb/tests/: db.rs
sdb_macro/: Cargo.toml
sdb_macro/src/: lib.rs
src/: dbpage.rs  iter.rs  lib.rs  main.rs
tests/: db.rs  main.rs
