cargo-features = ["edition2021"]

[package]
name = "sdb"
authors = [ "rmw <i@rmw.link>" ]
edition = "2021"
version = "0.0.1"
license = "AGPL-3.0-or-later"
description="a user-friendly wrapper for sanakirja database"

[dependencies]
anyhow = "1.0.40"
sanakirja = {git="https://github.com/gcxfd/sanakirja.git"}

[dev-dependencies]
static_init= {git="https://gitlab.com/vkahl/static_init.git"}
lazy_static = "1.4"
